[package]
name = "skia-canvas"
version = "1.0.1"
description = "A canvas environment for Node"
authors = ["Christian Swinehart <drafting@samizdat.co>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[dependencies]
crc = "^3.0"
css-color = "^0.2"
rayon = "^1.5"
crossbeam = "0.8.2"
once_cell = "1.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# window
winit = { version = '0.26.1', features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { version = "0.52.0", features = [
    "textlayout",
    "vulkan",
    "embed-freetype",
] }
ash = { version = "0.37" }
skulpin = { git = "https://github.com/aclysma/skulpin.git", rev = "c5fb342" }


[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.52.0", features = ["textlayout", "metal"] }
core-graphics-types = { version = "0.1.1" }
foreign-types = { version = "0.3.2" }
cocoa = { version = "0.24.0" }
objc = { version = "0.2.7" }
metal = { version = "0.24" }


[target.'cfg(target_os = "windows")'.dependencies]
skia-safe = { version = "0.52.0", features = ["textlayout", "d3d"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "task-api"]
